[gd_scene load_steps=9 format=3 uid="uid://y517mo12ijtg"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_mjkrb"]
[ext_resource type="Texture2D" uid="uid://bp01b4pt1lxgr" path="res://graphics/player/player.png" id="2_axp0k"]
[ext_resource type="Texture2D" uid="uid://bmv8wt6pupxhp" path="res://graphics/decals/white.png" id="3_u8kbl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_t32uf"]
radius = 61.0

[sub_resource type="Gradient" id="Gradient_nlk6v"]
offsets = PackedFloat32Array(0, 0.992248)
colors = PackedColorArray(0.172549, 0.627451, 0.847059, 0.866667, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ef40l"]
gradient = SubResource("Gradient_nlk6v")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_3h2n2"]
particle_flag_disable_z = true
spread = 15.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 750.0
initial_velocity_max = 1000.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 0.3
scale_max = 0.8
color = Color(0.172549, 0.627451, 0.847059, 0.866667)
color_ramp = SubResource("GradientTexture1D_ef40l")

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_32k23"]
polygon = PackedVector2Array(58, -32, 75, -20, 84, -13, 92, -14, 101, -7, 113, -5, 118, 0, 128, 0, 135, 4, 137, 21, 132, 29, 126, 34, 114, 31, 103, 42, 97, 51, 69, 51, 58, 38, 37, 43, 12, 53, -2, 58, -16, 59, -26, 53, -34, 42, -41, 30, -50, 15, -58, 0, -56, -15, -50, -30, -45, -43, -31, -50, -20, -56, -6, -60, 11, -62, 28, -63, 40, -56, 45, -47, 52, -36)

[node name="Player" type="CharacterBody2D"]
collision_mask = 31
script = ExtResource("1_mjkrb")

[node name="PlayerImage" type="Sprite2D" parent="."]
position = Vector2(42, -3)
rotation = 1.5708
texture = ExtResource("2_axp0k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, 0)
shape = SubResource("CircleShape2D_t32uf")

[node name="Leaser_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Grenade_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="LaserStartPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(142, 19)

[node name="Marker2D3" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(140, 8)

[node name="Marker2D2" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(138, 28)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(141, 15)
emitting = false
process_material = SubResource("ParticleProcessMaterial_3h2n2")
texture = ExtResource("3_u8kbl")
lifetime = 0.2
one_shot = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_32k23")

[connection signal="timeout" from="Leaser_timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Grenade_timer" to="." method="_on_grenade_timer_timeout"]
